# Innovation_Challenge_25

./: .gitignore  MIGRATION_FIX_GUIDE.md  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  TECH_LEAD_GUIDE.md  compose.yml  package.json  requirements.txt
backend/: API_DOCUMENTATION.md  Dockerfile  FRONTEND_API_INTEGRATION_PLAN.md  alembic.ini  compose.yml  pyproject.toml  setup.md
backend/alembic/: env.py  env2.py
backend/alembic/migrations/: init_db.sql
backend/alembic/versions/: 0e6e7d5e4dd0_initial_schema.py  e9817e354770_clean_initial_schema.py  f5fcac2cfa19_initial_schema.py
backend/scripts/: db_manager.py  init.sql  reset_database.py  reset_database.sh  run_ingestion.py  seed.py  seed_data.py
backend/src/: backend_api.py  main.py  settings.py
backend/src/api/: logginmain.py  main.py
backend/src/api/routes/: alerts.py  dashboard.py  data_ingestion.py  map_data.py
backend/src/api/utils/: __init__.py  transformers.py
backend/src/core/: __init__.py  database.py  errors.py  logging.py  models.py
backend/src/database/: __init__.py  connection.py  models.py  schema.py  seed.py
backend/src/parsers/: PIPELINE_README.md  README.md  base.py  commercial.py  csv_parser.py  h5n1_parser.py  ingestors.py  loader.py  mammal.py  wild_bird.py
backend/src/scripts/: init.sql  process_all_csv.py
backend/src/utils/: logger.py  settings.py
backend/src/validators/: data_validator.py  geocoder.py  schema.py  validator.py
services/service_name/: .dockerignore  Dockerfile  compose.yml  pyproject.toml
services/service_name/src/: main.py  settings.py
(+107 files in other folders)
