[project]
name = "bets_api"
[tool.poetry]
version = "1.0"  # base version

description = "A python project made to kick butt"
authors = ["Tiffany Behr <tiffany.behr@core4ce.com>", "First Last <email@core4ce.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.13"
uvicorn = { extras = ["standard"], version = ">=0.35.0" }
pydantic = "^2.11.9"
requests = "^2.32.5"
pyopenssl = "^25.3.0"
pandas = "^2.3.3"
numpy = "^2.3.4"
scipy = "^1.16.3"
folium = "^0.20.0"
plotly = "^6.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
